# typesafe-i18n-python

./: .gitignore  README.md  demo.py  pyproject.toml
.github/workflows/: ci.yml
_generated/: __init__.py  types.pyi  util.py
src/typesafe_i18n/: __init__.py  async_loader.py  backends.py  cli.py  config.py  detectors.py  formatters.py  generator.py  parser.py  plural.py  runtime.py  translation_files.py
src/typesafe_i18n/adapters/: __init__.py  django.py  fastapi.py  flask.py  jinja2.py
src/typesafe_i18n/contrib/: __init__.py  django.py  fastapi.py  flask.py
tests/: test_async_loader.py  test_backends.py  test_benchmark.py  test_concurrency.py  test_config.py  test_contrib_django.py  test_contrib_fastapi.py  test_contrib_flask.py  test_detectors.py  test_edge_cases.py  test_fixes.py  test_formatters.py  test_generator.py  test_integration.py  test_parser.py  test_plural.py  test_runtime.py  test_translation_files.py
translations/: en.yaml  zh.yaml
