[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "typesafe-i18n"
version = "0.3.0"
description = "Type-safe internationalization for Python"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]
keywords = ["i18n", "internationalization", "translation", "type-safe", "l10n"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]
django = []
flask = []
fastapi = []

[project.urls]
Homepage = "https://github.com/user/typesafe-i18n-python"
Documentation = "https://github.com/user/typesafe-i18n-python#readme"
Repository = "https://github.com/user/typesafe-i18n-python"
Issues = "https://github.com/user/typesafe-i18n-python/issues"

[project.scripts]
typesafe-i18n = "typesafe_i18n.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/typesafe_i18n"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
